# WebNowPlaying-Rainmeter

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AssemblyInfo.cs  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  WNPRedux-Adapter-Library.xml  WebNowPlaying.cs  WebNowPlaying.csproj  WebNowPlaying.sln  build.ps1  packages.config  publish.bat
.github/workflows/: release.yml
API/: RainmeterAPI.cs
ExampleSkin/: Example.ini
examples/: README.md
examples/WebNowPlayer/: WebNowPlayer.ini
examples/WebNowPlayer/@Resources/Fonts/: players.inc
examples/WebNowPlayer/@Resources/Scripts/: example.lua
src/: WebNowPlaying.cs  main.c  resource.rc.in
src/WNPReduxAdapterLibrary/: HttpServer.cs  MediaControls.cs  MediaInfo.cs  README.md  WNPRedux.cs
src/WNPReduxAdapterLibraryExtensions/: WNPReduxNative.cs
